# audio-player

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AudioPropertyReader.hpp  CMakeLists.txt  ConsoleDialog.cpp  ConsoleDialog.hpp  Dockerfile  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Playlist.hpp  PlaylistHeader.hpp  PlaylistModel.cpp  PlaylistModel.hpp  PlaylistWidget.cpp  PlaylistWidget.hpp  README.md  Resources.qrc  Song.hpp  TaglibAudioPropertyReader.cpp  TaglibAudioPropertyReader.hpp
cmake/: FindTaglib.cmake  build.cmake  googletest-download.cmake  googletest.cmake  sanitizers.cmake  warnings.cmake
cmake/build_configs/: linux.cmake  sanitizers.cmake  win32.cmake
resources/: Resources.qrc
resources/themes/: gray-orange.css
scripts/: build-docker.sh
share/: foobar.desktop
src/: AudioMetaData.hpp  AudioMetaDataProvider.cpp  AudioMetaDataProvider.hpp  CMakeLists.txt  ConfigurationKeys.hpp  FilesystemPlaylistIO.hpp  IAudioMetaDataProvider.hpp  MainWindow.cpp  MainWindow.hpp  Playlist.cpp  Playlist.hpp  PlaylistHeader.cpp  PlaylistLoader.cpp  PlaylistLoader.hpp  PlaylistManager.cpp  PlaylistManager.hpp  PlaylistModel.cpp  PlaylistModel.hpp  PlaylistWidget.cpp  PlaylistWidget.hpp  TaglibAudioPropertyReader.cpp  main.cpp
src/app/: AlbumGallery.cpp  AlbumGallery.hpp  AlbumModel.cpp  AlbumModel.hpp  ApplicationStyle.cpp  ApplicationStyle.hpp  CMakeLists.txt  ConsoleDialog.hpp  EscapableLineEdit.cpp  EscapableLineEdit.hpp  LibraryManager.cpp  LibraryManager.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MultilineTabBar.cpp  MultilineTabBar.hpp  PlaybackControlButton.hpp  PlaylistFilterModel.cpp  PlaylistFilterModel.hpp  PlaylistHeader.cpp  PlaylistHeader.hpp  PlaylistModel.cpp  PlaylistModel.hpp  PlaylistWidget.cpp  PlaylistWidget.hpp  main.cpp
src/app/resources/: Resources.qrc
src/app/resources/themes/: gray-orange.css  silver-blue.css
src/core/: CMakeLists.txt  ConfigurationKeys.hpp  FileUtilities.cpp  FileUtilities.hpp  FilesystemPlaylistIO.cpp  FilesystemPlaylistIO.hpp  IPlaylistIO.hpp  Playlist.cpp  Playlist.hpp  PlaylistManager.cpp  PlaylistManager.hpp
src/core/tests/: CMakeLists.txt  TestPlaylist.cpp
src/core/tests/mocks/: PlaylistIOMock.hpp
src/media/: CMakeLists.txt  MediaPlayer.hpp  MediaPlayerQtBackend.cpp
src/media/include/: MediaPlayer.hpp
src/media/qtbackend/: MediaPlayerQtBackend.cpp  MediaPlayerQtBackend.hpp
src/metadata/: Album.hpp  AudioMetaData.hpp  AudioMetaDataProvider.cpp  AudioMetaDataProvider.hpp  AudioMetaDataProviderCache.cpp  AudioMetaDataProviderCache.hpp  CMakeLists.txt  IAudioMetaDataProvider.hpp  MetaDataCache.cpp  MetaDataCache.hpp  Metadata.hpp  ProvidedMetadata.hpp
src/plugins/: CMakeLists.txt
src/plugins/mpris/: CMakeLists.txt  MprisPlugin.cpp  MprisPlugin.hpp  MprisTypes.hpp  dbus-annotate-qt.py
